--- a/src/components/Gallery/styles.css
+++ b/src/components/Gallery/styles.css
@@ -1,6 +1,6 @@
 .gallery {
-    min-height: 90vh;
-    height: auto;
+    /*min-height: 90vh;*/
+    /*height: auto;*/
     width: 100vw;
     overflow: hidden;
 
