--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Manrope:wght@500&display=swap');
 
-* {
-    box-sizing: border-box;
-}
+/** {*/
+/*    box-sizing: border-box;*/
+/*}*/
 
 body {
     font-family: "Orchidea Pro", Arial, sans-serif;
