add new feature of scrolling: we can swipe gallery with needed positions

--- a/src/components/Gallery/styles.css
+++ b/src/components/Gallery/styles.css
@@ -1,10 +1,14 @@
 .gallery {
-    /*min-height: 90vh;*/
+    height: 100vh;
     /*height: auto;*/
     width: 100vw;
     overflow: hidden;
 
     position: relative;
+}
+
+.gallery__section {
+    height: 100vh;
 }
 
 .horizontal-scroll {
