--- a/src/components/Gallery/styles.css
+++ b/src/components/Gallery/styles.css
@@ -3,16 +3,22 @@
     /*height: auto;*/
     width: 100vw;
     overflow: hidden;
-
-    position: relative;
 }
 
 .gallery__section {
     height: 100vh;
 }
 
+.gallery__block {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 125px;
+    /*position: relative;*/
+}
+
 .horizontal-scroll {
-    position: absolute;
+    /*position: absolute;*/
     display: flex;
     gap: 40px;
     /*margin-left: 300px;*/
