--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -2,6 +2,7 @@
     background-color: var(--bg-footer-and-header);
     padding: 30px 0;
     color: var(--color-on-black);
+    box-shadow: 0 -100px 20px 20px rgba(70, 67, 65, 0.8);
 }
 
 .header__content {
