--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
 /*    box-sizing: border-box;*/
 /*}*/
 
+h2, h3, p {
+    margin: 0;
+}
+
 body {
     font-family: "Orchidea Pro", Arial, sans-serif;
     height: 100vh;
