--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,8 +1,7 @@
 .header {
-    background-color: var(--bg-footer-and-header);
+    background: linear-gradient(0deg, rgba(20,20,20,0.711922268907563) 0%, rgba(0,0,0,1) 55%);
     padding: 30px 0;
     color: var(--color-on-black);
-    box-shadow: 0 -100px 20px 20px rgba(70, 67, 65, 0.8);
 }
 
 .header__content {
