--- a/src/components/Gallery/styles.css
+++ b/src/components/Gallery/styles.css
@@ -1,12 +1,15 @@
 .gallery {
-    height: 100vh;
+    height: 100%;
     /*height: auto;*/
     width: 100vw;
     overflow: hidden;
 }
 
 .gallery__section {
-    height: 100vh;
+    height: 100%;
+}
+.gallery__title {
+    padding-top: 160px;
 }
 
 .gallery__block {
