--- a/src/components/Gallery/styles.css
+++ b/src/components/Gallery/styles.css
@@ -1,6 +1,5 @@
 .gallery {
-    height: 100%;
-    /*height: auto;*/
+    height: 80%;
     width: 100vw;
     overflow: hidden;
 }
@@ -8,8 +7,10 @@
 .gallery__section {
     height: 100%;
 }
-.gallery__title {
-    padding-top: 160px;
+@media screen and (min-width: 1024px) {
+    .gallery__title {
+        padding-top: 160px;
+    }
 }
 
 .gallery__block {
@@ -17,14 +18,11 @@
     display: flex;
     flex-direction: column;
     gap: 125px;
-    /*position: relative;*/
 }
 
 .horizontal-scroll {
-    /*position: absolute;*/
     display: flex;
     gap: 40px;
-    /*margin-left: 300px;*/
 }
 
 .gallery__image {
@@ -36,4 +34,18 @@
 .gallery__image img {
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 1023px) {
+    .horizontal-scroll {
+        overflow-x: scroll;
+    }
+
+    .horizontal-scroll::-webkit-scrollbar { width: 0; }
+
+    .horizontal-scroll { -ms-overflow-style: none; }
+
+    .gallery__block {
+        gap: 55px;
+    }
 }
