--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -35,3 +35,14 @@ button {
 .header__button {
     color: white;
 }
+
+@media screen and (max-width: 1024px) {
+    .header {
+        padding: 18px 20px;
+    }
+
+    .header__logo {
+        height: 20px;
+    }
+
+}
