--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Manrope:wght@500&display=swap');
 
-/** {*/
-/*    box-sizing: border-box;*/
-/*}*/
+* {
+    box-sizing: border-box;
+}
 
 h2, h3, p {
     margin: 0;
@@ -18,15 +18,18 @@ body {
     font-family: "Orchidea Pro", Arial, sans-serif;
     height: 100vh;
     margin: 0;
+    overflow-x: hidden;
 }
 
-#root {
-    overflow: hidden;
+
+@media screen and (min-width: 1400px) {
+    :root {
+        --container: 1400px;
+        --min-container: 1324px;
+    }
 }
 
 :root {
-    --container: 1400px;
-    --min-container: 1324px;
     --bg-footer-and-header: black;
     --color-on-black: white;
 }
