--- a/src/components/Gallery/styles.css
+++ b/src/components/Gallery/styles.css
@@ -39,6 +39,14 @@
 @media screen and (max-width: 1023px) {
     .horizontal-scroll {
         overflow-x: scroll;
+        overflow-y: hidden;
+        padding: 0 20px;
+        gap: 30px;
+    }
+
+    .gallery__image {
+        width: 225px;
+        height: 344px;
     }
 
     .horizontal-scroll::-webkit-scrollbar { width: 0; }
