--- a/src/components/Section/styles.css
+++ b/src/components/Section/styles.css
@@ -7,7 +7,7 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    row-gap: 100px;
+    gap: 100px;
 }
 
 .section__wrapper {
@@ -84,6 +84,10 @@
 
 
 @media screen and (max-width: 1023px) {
+    .wrapper {
+        gap: 55px;
+    }
+
     .title {
         font-size: 1.5em;
         padding: 0 20px;
